--- a/icons.html
+++ b/icons.html
@@ -4,21 +4,36 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="/css/bootstrap.css">
+    <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/icons-style.css">
     <title></title>
   </head>
   <body>
     <div class="container-fluid">
       <div class="row">
-        <div class="col-md-1">.col-md-2</div>
-        <div class="col-md-1">.col-md-2</div>
-        <div class="col-md-1">.col-md-2</div>
-        <div class="col-md-1">.col-md-2</div>
-        <div class="col-md-1">.col-md-2</div>
-        <div class="col-md-1">.col-md-2</div>
+        <div class="col-md-2">.col-md-2</div>
+        <div class="col-md-2">.col-md-2</div>
+        <div class="col-md-2">.col-md-2</div>
+        <div class="col-md-2">.col-md-2</div>
+        <div class="col-md-2">.col-md-2</div>
+        <div class="col-md-2">.col-md-2</div>
+      </div>
+      <div class="row">
+        <div class="col-md-2">.col-md-2</div>
+        <div class="col-md-2">.col-md-2</div>
+        <div class="col-md-2">.col-md-2</div>
+        <div class="col-md-2">.col-md-2</div>
+        <div class="col-md-2">.col-md-2</div>
+        <div class="col-md-2">.col-md-2</div>
+      </div>
+      <div class="row">
+        <div class="col-md-2">.col-md-2</div>
+        <div class="col-md-2">.col-md-2</div>
+        <div class="col-md-2">.col-md-2</div>
+        <div class="col-md-2">.col-md-2</div>
+        <div class="col-md-2">.col-md-2</div>
+        <div class="col-md-2">.col-md-2</div>        
       </div>
     </div>
-
   </body>
 </html>
