--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
   <link rel="stylesheet" href="css/layout.css">
 </head>
 <body>
+  <div class="container-fluid">
+    
+  </div>
 
 </body>
 </html>
