Finished header module started hotel reservation models

--- a/index.html
+++ b/index.html
@@ -6,9 +6,57 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>NortSea-Tidal-Wave</title>
   <link rel="stylesheet" href="css/bootstrap.css">
+  <link rel="stylesheet" href="css/navbar.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
-  <h1>Hello World!</h1>
+<div class="container-fluid">
+  <div class="row" id="header-module">
+    <div class="col-md-4">
+        <div class="logo"></div>
+    </div>
+    <div class="col-md-8">
+      <nav class="navbar navbar-inverse">
+        <ul class="nav navbar-nav">
+          <li><a href="#"><i class="fa fa-envelope" aria-hidden="true"> info@hellohelp.com</i></a></li>
+          <li><a href="#"><i class="fa fa-phone" aria-hidden="true"> +440 8753692088</i></a></li>
+          <li class="dropdown"><a href="#">Log In <span class="caret"></span></a></li>
+          <li><a href="#">EN <span class="caret"></span></a></li>
+          <li><a href="#" class="fa fa-facebook" alt="facebook logo"></a></li>
+          <li><a href="#" class="fa fa-twitter" alt="twitter logo"></a></li>
+          <li><a href="#" class="fa fa-instagram" alt="instagram logo"></a></li>
+          <li><a href="#" class="fa fa-envelope" alt="envelope logo"></a></li>
+        </ul>
+        <ul class="nav navbar-nav">
+          <li><a class="active" href="#">Home</a></li>
+          <li><a href="#">About Us</a></li>
+          <li class="dropdown"><a href="#">Services <span class="caret"></span></a></li>
+          <li><a href="#">Products <span class="caret"></span></a></li>
+          <li><a href="#">Gallery</a></li>
+          <li><a href="#">Contact</a></li>
+          <li><a href="#"><i class="fa fa-search" aria-hidden="true"></i></a></li>
+        </ul>
+      </nav>
+    </div>
+  </div>
+  <section class="row header-section">
+    <div class="row" id="hotel-reservation-module">
+      <div class="row module-tab">
+        <div class="col-md-1">
+            Hotel
+        </div>
+      </div>
+      <div class="row module-content">
+        <div class="col-md-10">
+        </div>
+        <div class="col-md-2">
+          <button type="button" name="button">Search Book</button>
+        </div>
+      </div>
+    </div>
+  </section>
+</div> <!--- closing the container class--->
+
 
 </body>
 </html>
