--- a/icons.html
+++ b/icons.html
@@ -11,28 +11,64 @@
   <body>
     <div class="container-fluid">
       <div class="row">
-        <div class="col-md-2">.col-md-2</div>
-        <div class="col-md-2">.col-md-2</div>
-        <div class="col-md-2">.col-md-2</div>
-        <div class="col-md-2">.col-md-2</div>
-        <div class="col-md-2">.col-md-2</div>
-        <div class="col-md-2">.col-md-2</div>
+        <div class="col-md-2"></div>
+        <div class="col-md-2">
+          <img class="img-responsive center-block" src="assets/suitcase-icon.png">
+        </div>
+        <div class="col-md-2">
+          <img class="img-responsive center-block" src="assets/map-icon.png">
+        </div>
+        <div class="col-md-2">
+          <img class="img-responsive center-block" src="assets/globe-icon.png">
+        </div>
+        <div class="col-md-2">
+          <img class="img-responsive center-block" src="assets/messaging-icon.png">
+        </div>
+        <div class="col-md-2"></div>
       </div>
       <div class="row">
-        <div class="col-md-2">.col-md-2</div>
-        <div class="col-md-2">.col-md-2</div>
-        <div class="col-md-2">.col-md-2</div>
-        <div class="col-md-2">.col-md-2</div>
-        <div class="col-md-2">.col-md-2</div>
-        <div class="col-md-2">.col-md-2</div>
+        <div class="col-md-2 icon-card"></div>
+        <div class="col-md-2 icon-card">
+          <p class="text-center"><strong>Amazing Travel</strong></p>
+        </div>
+        <div class="col-md-2 icon-card discover-card">
+          <p class="text-center"><strong>Discover</strong></p>
+        </div>
+        <div class="col-md-2 icon-card">
+          <p class="text-center"><strong>Book Your Trip</strong></p>
+        </div>
+        <div class="col-md-2 icon-card">
+          <p class="text-center"><strong>Nice Support</strong></p>
+        </div>
+        <div class="col-md-2"></div>
       </div>
       <div class="row">
-        <div class="col-md-2">.col-md-2</div>
-        <div class="col-md-2">.col-md-2</div>
-        <div class="col-md-2">.col-md-2</div>
-        <div class="col-md-2">.col-md-2</div>
-        <div class="col-md-2">.col-md-2</div>
-        <div class="col-md-2">.col-md-2</div>        
+        <div class="col-md-2 icon-desc"></div>
+        <div class="col-md-2 icon-desc">
+          <p class="text-center">Nam liber tempor soluta nobis eiefend option congue nihil imperideit doming id quod mazim.</p>
+          <p class="btn-read-more text-center"> Read More
+            <span class="glyphicon glyphicon-play" aria-hidden="true"></span>
+          </p>
+        </div>
+        <div class="col-md-2 icon-desc discover-desc">
+          <p class="text-center">Lorem ipsum dolor sit amet, adipisicing elit, sed diam nonummy nibh euismod tincidunt ut laoreet.</p>
+          <p class="read-more text-center descover-desc"> Read More
+            <span class="glyphicon glyphicon-play" aria-hidden="true"></span>
+          </p>
+        </div>
+        <div class="col-md-2 icon-desc">
+          <p class="text-center">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut.</p>
+          <p class="btn-read-more text-center"> Read More
+            <span class="glyphicon glyphicon-play" aria-hidden="true"></span>
+          </p>
+        </div>
+        <div class="col-md-2 icon-desc">
+          <p class="text-center">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut.</p>
+          <p class="btn-read-more text-center"> Read More
+            <span class="glyphicon glyphicon-play" aria-hidden="true"></span>
+          </p>
+        </div>
+        <div class="col-md-2"></div>
       </div>
     </div>
   </body>
