--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <nav class="navbar navbar-inverse">
         <ul class="nav navbar-nav">
           <li><a href="#"><i class="fa fa-envelope" aria-hidden="true"> info@hellohelp.com</i></a></li>
-          <li><a href="#"><i class="fa fa-phone" aria-hidden="true"> +440 8753692088</i></a></li>
+            <li><a href="#"><i class="fa fa-phone" aria-hidden="true"> +440 8753692088</i></a></li>
           <li class="dropdown"><a href="#">Log In <span class="caret"></span></a></li>
           <li><a href="#">EN <span class="caret"></span></a></li>
           <li><a href="#" class="fa fa-facebook" alt="facebook logo"></a></li>
@@ -43,14 +43,76 @@
     <div class="row" id="hotel-reservation-module">
       <div class="row module-tab">
         <div class="col-md-1">
-            Hotel
+          <i class="fa fa-building" aria-hidden="true"> Hotel</i>
         </div>
       </div>
-      <div class="row module-content">
-        <div class="col-md-10">
+      <div class="row module-content clearfix">
+        <div class="row" id="button-names">
+          <div class="col-md-1 resize"><span>Arrival</span></div>
+          <div class="col-md-1 resize"><span>Going</span></div>
+          <div class="col-md-2 resize"><span>Room</span></div>
+          <div class="col-md-2 resize"><span>Person</span></div>
+          <div class="col-md-2 resize"><span>Child</span></div>
+          <div class="col-md-2 resize"><span>Day</span></div>
         </div>
-        <div class="col-md-2">
-          <button type="button" name="button">Search Book</button>
+        <div class="row input-row">
+          <div class="col-md-1 arrival-input resize">
+            <input type="text" placeholder="16.07.2015"><span class="fa fa-calendar"></span>
+          </div>
+          <div class="col-md-1 going-input resize">
+            <input type="text" placeholder="16.07.2015"><span class="fa fa-calendar"></span>
+          </div>
+          <div class="col-md-2 room-btn resize">
+            <div class="btn-group">
+              <button type="button" class="btn">2</button>
+              <button type="button" class="btn dropdown-toggle" data-toggle="dropdown">
+                <span class="caret"></span>
+              </button>
+              <ul class="dropdown-menu" role="menu">
+                <li><a href="#">1</a></li>
+                <li><a href="#">3</a></li>
+              </ul>
+            </div>
+          </div>
+          <div class="col-md-2 person-btn resize">
+            <div class="btn-group">
+              <button type="button" class="btn">2</button>
+              <button type="button" class="btn dropdown-toggle" data-toggle="dropdown">
+                <span class="caret"></span>
+              </button>
+              <ul class="dropdown-menu" role="menu">
+                <li><a href="#">1</a></li>
+                <li><a href="#">3</a></li>
+              </ul>
+            </div>
+          </div>
+          <div class="col-md-2 child-btn resize">
+            <div class="btn-group">
+              <button type="button" class="btn">1</button>
+              <button type="button" class="btn dropdown-toggle" data-toggle="dropdown">
+                <span class="caret"></span>
+              </button>
+              <ul class="dropdown-menu" role="menu">
+                <li><a href="#">2</a></li>
+                <li><a href="#">3</a></li>
+              </ul>
+            </div>
+          </div>
+          <div class="col-md-2 day-btn resize">
+            <div class="btn-group">
+              <button type="button" class="btn">1</button>
+              <button type="button" class="btn dropdown-toggle" data-toggle="dropdown">
+                <span class="caret"></span>
+              </button>
+              <ul class="dropdown-menu" role="menu">
+                <li><a href="#">2</a></li>
+                <li><a href="#">3</a></li>
+              </ul>
+            </div>
+          </div>
+          <div class="col-md-1">
+            <button class="btn btn-basic btn-md" name="button">SEARCH BOOK</button>
+          </div>
         </div>
       </div>
     </div>
@@ -58,5 +120,23 @@
 </div> <!--- closing the container class--->
 
 
+
+
 </body>
 </html>
+
+
+
+<!-- <select>
+  <option value="10">10</option>
+  <option value="11">11</option>
+  <option value="12">12</option>
+  <option value="13">13</option>
+</select>
+
+<p>Arrival</p>
+<p>Going</p>
+<p>Room</p>
+<p>person</p>
+<p>Child</p>
+<p>Day</p>
