--- a/modules/icons.html
+++ b/modules/icons.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="css/bootstrap.css">
-    <link rel="stylesheet" href="css/icons-style.css">
+    <link rel="stylesheet" href="../css/bootstrap.css">
+    <link rel="stylesheet" href="../css/icons-style.css">
     <title></title>
   </head>
   <body>
@@ -13,16 +13,16 @@
       <div class="row">
         <div class="col-md-2"></div>
         <div class="col-md-2">
-          <img class="img-responsive center-block" src="assets/suitcase-icon.png">
+          <img class="img-responsive center-block" src="../assets/suitcase-icon.png">
         </div>
         <div class="col-md-2">
-          <img class="img-responsive center-block" src="assets/map-icon.png">
+          <img class="img-responsive center-block" src="../assets/map-icon.png">
         </div>
         <div class="col-md-2">
-          <img class="img-responsive center-block" src="assets/globe-icon.png">
+          <img class="img-responsive center-block" src="../assets/globe-icon.png">
         </div>
         <div class="col-md-2">
-          <img class="img-responsive center-block" src="assets/messaging-icon.png">
+          <img class="img-responsive center-block" src="../assets/messaging-icon.png">
         </div>
         <div class="col-md-2"></div>
       </div>
