--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <title>NortSea-Tidal-Wave</title>
   <link rel="stylesheet" href="css/bootstrap.css">
   <link rel="stylesheet" href="css/layout.css">
+  <link rel="stylesheet" href="css/01-index.css">
 </head>
 <body>
   <div class="container-fluid">
