Initial commit for nap and working copy of footer section

--- a/footer.html
+++ b/footer.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="css/footer.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
-<body>
+<footer>
   <div class="navbar navbar-inverse navbar-fixed-bottom" role="navigation">
     <div class="footer-container-fluid">
       <div class="row footer">
@@ -42,7 +42,7 @@
           <li><i class="fa fa-send" aria-hidden="true"></i>Email: <a href="#">support@nortsea.com</a></li>
           <li><i class="fa fa-compass" aria-hidden="true"></i>GPS: <a href="#">10.021211-118.469009</a></li>
         </div>
-        <div class="col-md-2">
+        <div class="col-md-2 logo">
           <img src="assets/logo_160.png"
         </div>
       </div>
@@ -57,5 +57,5 @@
     </div>
   </div>
 </div>
-</body>
+</footer>
 </html>
