--- a/01-nap.html
+++ b/01-nap.html
@@ -6,51 +6,69 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>NortSea-Tidal-Wave</title>
   <link rel="stylesheet" href="css/bootstrap.css">
+  <link rel="stylesheet" href="css/01-nap.css">
 </head>
 <body>
 
   <div class="container-fluid">
-    <div class="row news">
-      <div class="col-md-6" col1>
-        <h3 class="title">News</h3>
-            <div class="col-md-4 col1-1" "col-md-offset-2">
-              <img class="img-responsive" src="assets/Jan-29.png">
-              <img class="img-responsive" src="assets/Feb-15.png">
-              <img class="img-responsive" src="assets/Mar-2.png">
+    <main class="row">
+      <div class="col-md-12">
+          <div class="col-md-offset-2 col-md-4 news">
+            <h4 class="title">News<img class="img-responsive" src="assets/indicator-dots.png" align="right" alt="Responsive image"></img></h4>
+             <div class="row">
+               <div class="col-md-6">
+                 <img class="img-responsive" src="assets/Jan-29.png" alt="Responsive image">
+               </div>
+              <div class="col-md-5">
+                <h5><a href="#">Lorem ipsum dolor sit amet</a></h5>
+                <a class="news1" href="#">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt</a>
+                <p><a class="news1" href="#">Read More <i class="fa fa-caret-right"></i></a></p>
+              </div>
             </div>
-            <div class="col-md-4 col1-2">
-              <h5><a href="#">Lorem ipsum dolor sit amet</h5>
-              <h6><a href="#">Lorem ipsum dolor sit amet,<br>
-                 consectetur adipisicing elit, sed<br>
-                 do eiusmod tempor incididunt</a></h6>
-              <h5><a href="#">Lorem ipsum dolor sit amet</h5>
-              <h6><a href="#">Lorem ipsum dolor sit amet,<br>
-                  consectetur adipisicing elit, sed<br>
-                  do eiusmod tempor incididunt</a></h6>
-              <h5><a href="#">Lorem ipsum dolor sit amet</h5>
-              <h6><a href="#">Lorem ipsum dolor sit amet,<br>
-                  consectetur adipisicing elit, sed<br>
-                  do eiusmod tempor incididunt</a></h6>
+            <div class="row">
+             <div class="col-md-6">
+               <img class="img-responsive" src="assets/Feb-15.png" alt="Responsive image">
+            </div>
+             <div class="col-md-5">
+              <h5><a href="#">Lorem ipsum dolor sit amet</a></h5>
+              <a class="news1" href="#">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt</a>
+              <p><a class="news1" href="#">Read More <i class="fa fa-caret-right"></i></a></p>
+            </div>
+          </div>
+           <div class="row">
+             <div class="col-md-6">
+               <img class="img-responsive" src="assets/Feb-15.png" alt="Responsive image">
+             </div>
+             <div class="col-md-5">
+              <h5><a href="#">Lorem ipsum dolor sit amet</a></h5>
+              <a class="news1" href="#">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt</a>
+              <p><a class="news1" href="#">Read More <i class="fa fa-caret-right"></i></a></p>
+            </div>
+          </div>
+          <div class="row">
+            <a href="#" class="btn-view-all col-md-11" role="button">View All</a>
           </div>
       </div>
-       <div class="col-md-4">
-        <div class="row announce">
-         <h3 class="title">Announcements</h3>
-          <h5 class="title">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor<h5>
-           <h6><a href="#">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed<br>
-           do eiusmod tempor incididunt ut labore et dolore magna</a></h6>
-          <a href="#">Read More <i class="fa fa-caret-right"></i></a>
-          <h5 class="title">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor<h5>
-          <h6><a href="#">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed<br>
-          do eiusmod tempor incididunt ut labore et dolore magna</a></h6>
-          <a href="#">Read More <i class="fa fa-caret-right"></i></a>
+
+        <div class="col-md-3">
+          <div class="row announcements">
+            <h4 class="title">Announcements<img class="img-responsive" src="assets/indicator-dots.png" align="right" alt="Responsive image"></img></h4>
+            <h5 class="title">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor</h5>
+            <a href="#">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna</a>
+            <p><a href="#">Read More <i class="fa fa-caret-right"></i></a></p>
+            <div class="border-line"></div>
+            <h5 class="title">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor</h5>
+            <a href="#">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna</a>
+            <p><a href="#">Read More <i class="fa fa-caret-right"></i></a></p>
+          </div>
+          <div class="row products top-buffer">
+            <div class="products">
+              <h4 class="title">Products</h4>
+              <a href="#">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod.</a>
+              <p><a href="#">Read More <i class="fa fa-caret-right"></i></a></p>
+            </div>
+          </div>
+        </div>
       </div>
-      <div class="products">
-        <h5 class="title">Products</h5>
-          <h6><a href="#">Lorem ipsum dolor sit<br>
-            amet, consectetur adipisc-<br>
-            ing elit, sed do eiusmod.</a></h6>
-          <a href="#">Read More <i class="fa fa-caret-right"></i></a>
-      </div>
-    </div>
+    </main>
   </div>
