--- a/pages/02-about-us.html
+++ b/pages/02-about-us.html
@@ -5,10 +5,84 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>About Us</title>
-  <link rel="stylesheet" href="css/bootstrap.css">
-  <link rel="stylesheet" href="css/layout.css">
+  <link rel="stylesheet" href="../css/bootstrap.css">
+  <link rel="stylesheet" href="../css/layout.css">
+  <link rel="stylesheet" href="../css/02-about-us.css">
+  <link rel="stylesheet" href="../css/icons-style.css">
 </head>
 <body>
-
+  <div class="container-fluid">
+    <div class="row about-us-back">
+      <div class="col-md-8"></div>
+        <h1 class="text-left left-title">About Us</h1>
+      <div class="col-md-4"></div>
+        <p class="text-right">Home / Pages / About Us</>
+    </div>
+    <div class="row about-us-back">
+      <div class="col-md-12"></div>
+        <h1 class=" text-center about-us-desc">About Us</h1>
+          <p class="text-center desc-about-us">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+    </div>
+    <div class="row icons-row">
+      <div class="col-md-2"></div>
+      <div class="col-md-2">
+        <img class="img-responsive center-block" src="../assets/suitcase-icon.png">
+      </div>
+      <div class="col-md-2">
+        <img class="img-responsive center-block" src="../assets/map-icon.png">
+      </div>
+      <div class="col-md-2">
+        <img class="img-responsive center-block" src="../assets/globe-icon.png">
+      </div>
+      <div class="col-md-2">
+        <img class="img-responsive center-block" src="../assets/messaging-icon.png">
+      </div>
+      <div class="col-md-2"></div>
+    </div>
+    <div class="row">
+      <div class="col-md-2 icon-card"></div>
+      <div class="col-md-2 icon-card">
+        <p class="text-center"><strong>Amazing Travel</strong></p>
+      </div>
+      <div class="col-md-2 icon-card discover-card">
+        <p class="text-center"><strong>Discover</strong></p>
+      </div>
+      <div class="col-md-2 icon-card">
+        <p class="text-center"><strong>Book Your Trip</strong></p>
+      </div>
+      <div class="col-md-2 icon-card">
+        <p class="text-center"><strong>Nice Support</strong></p>
+      </div>
+      <div class="col-md-2"></div>
+    </div>
+    <div class="row">
+      <div class="col-md-2 icon-desc"></div>
+      <div class="col-md-2 icon-desc">
+        <p class="text-center">Nam liber tempor soluta nobis eiefend option congue nihil imperideit doming id quod mazim.</p>
+        <p class="btn-read-more text-center"> Read More
+          <span class="glyphicon glyphicon-play" aria-hidden="true"></span>
+        </p>
+      </div>
+      <div class="col-md-2 icon-desc discover-desc">
+        <p class="text-center">Lorem ipsum dolor sit amet, adipisicing elit, sed diam nonummy nibh euismod tincidunt ut laoreet.</p>
+        <p class="read-more text-center descover-desc"> Read More
+          <span class="glyphicon glyphicon-play" aria-hidden="true"></span>
+        </p>
+      </div>
+      <div class="col-md-2 icon-desc">
+        <p class="text-center">Lorem ipsum dolor sit amet, adipisicing elit, sed diam nonummy nibh euismod tincidunt ut laoreet.</p>
+        <p class="btn-read-more text-center"> Read More
+          <span class="glyphicon glyphicon-play" aria-hidden="true"></span>
+        </p>
+      </div>
+      <div class="col-md-2 icon-desc">
+        <p class="text-center">Lorem ipsum dolor sit amet, adipisicing elit, sed diam nonummy nibh euismod tincidunt ut laoreet.</p>
+        <p class="btn-read-more text-center"> Read More
+          <span class="glyphicon glyphicon-play" aria-hidden="true"></span>
+        </p>
+      </div>
+      <div class="col-md-2"></div>
+    </div>
+  </div>
 </body>
 </html>
