update about us description and remove colors from discover text.

--- a/pages/02-about-us.html
+++ b/pages/02-about-us.html
@@ -13,23 +13,30 @@
 <body>
   <div class="container-fluid">
     <div class="row about-us-back">
-      <div class="col-md-8"></div>
+      <div class="col-md-1"></div>
+      <div class="col-md-7">
         <h1 class="text-left left-title">About Us</h1>
-      <div class="col-md-4"></div>
-        <p class="text-right">Home / Pages / About Us</>
+      </div>
+      <div class="col-md-3">
+        <p class="text-right">Home / Pages / About Us</p>
+      </div>
     </div>
     <div class="row about-us-back">
-      <div class="col-md-12"></div>
-        <h1 class=" text-center about-us-desc">About Us</h1>
-          <p class="text-center desc-about-us">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-    </div>
+      <div class="col-md-2"></div>
+      <div class="col-md-8">
+        <h1 class=" text-center about-us-desc"><strong>About Us</strong></h1>
+          <p class="text-center desc-about-us"><strong>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</strong></p>
+          <p class="text-center desc-about-us desc-about-content">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+      </div>
+      <div class="col-md-2"></div>
+  </div>
     <div class="row icons-row">
       <div class="col-md-2"></div>
       <div class="col-md-2">
         <img class="img-responsive center-block" src="../assets/suitcase-icon.png">
       </div>
       <div class="col-md-2">
-        <img class="img-responsive center-block" src="../assets/map-icon.png">
+        <img class="img-responsive center-block" src="../assets/black-map-icon.png">
       </div>
       <div class="col-md-2">
         <img class="img-responsive center-block" src="../assets/globe-icon.png">
@@ -44,7 +51,7 @@
       <div class="col-md-2 icon-card">
         <p class="text-center"><strong>Amazing Travel</strong></p>
       </div>
-      <div class="col-md-2 icon-card discover-card">
+      <div class="col-md-2 icon-card">
         <p class="text-center"><strong>Discover</strong></p>
       </div>
       <div class="col-md-2 icon-card">
@@ -63,9 +70,9 @@
           <span class="glyphicon glyphicon-play" aria-hidden="true"></span>
         </p>
       </div>
-      <div class="col-md-2 icon-desc discover-desc">
+      <div class="col-md-2 icon-desc">
         <p class="text-center">Lorem ipsum dolor sit amet, adipisicing elit, sed diam nonummy nibh euismod tincidunt ut laoreet.</p>
-        <p class="read-more text-center descover-desc"> Read More
+        <p class="btn-read-more text-center"> Read More
           <span class="glyphicon glyphicon-play" aria-hidden="true"></span>
         </p>
       </div>
