Update scaffolding and boilerplate

--- a/index.html
+++ b/index.html
@@ -71,64 +71,64 @@
             <div class="col-md-2 resize"><span>Child</span></div>
             <div class="col-md-2 resize"><span>Day</span></div>
           </div>
-        </div>
-        <div class="row input-row">
-          <div class="col-md-1 arrival-input resize">
-            <input type="text" placeholder="16.07.2015"><span class="fa fa-calendar"></span>
-          </div>
-          <div class="col-md-1 going-input resize">
-            <input type="text" placeholder="16.07.2015"><span class="fa fa-calendar"></span>
-          </div>
-          <div class="col-md-2 room-btn resize">
-            <div class="btn-group">
-              <button type="button" class="btn">2</button>
-              <button type="button" class="btn dropdown-toggle" data-toggle="dropdown">
-                <span class="caret"></span>
-              </button>
-              <ul class="dropdown-menu" role="menu">
-                <li><a href="#">1</a></li>
-                <li><a href="#">3</a></li>
-              </ul>
+          <div class="row input-row">
+            <div class="col-md-1 arrival-input resize">
+              <input type="text" placeholder="16.07.2015"><span class="fa fa-calendar"></span>
             </div>
-          </div>
-          <div class="col-md-2 person-btn resize">
-            <div class="btn-group">
-              <button type="button" class="btn">2</button>
-              <button type="button" class="btn dropdown-toggle" data-toggle="dropdown">
-                <span class="caret"></span>
-              </button>
-              <ul class="dropdown-menu" role="menu">
-                <li><a href="#">1</a></li>
-                <li><a href="#">3</a></li>
-              </ul>
+            <div class="col-md-1 going-input resize">
+              <input type="text" placeholder="16.07.2015"><span class="fa fa-calendar"></span>
             </div>
-          </div>
-          <div class="col-md-2 child-btn resize">
-            <div class="btn-group">
-              <button type="button" class="btn">1</button>
-              <button type="button" class="btn dropdown-toggle" data-toggle="dropdown">
-                <span class="caret"></span>
-              </button>
-              <ul class="dropdown-menu" role="menu">
-                <li><a href="#">2</a></li>
-                <li><a href="#">3</a></li>
-              </ul>
+            <div class="col-md-2 room-btn resize">
+              <div class="btn-group">
+                <button type="button" class="btn">2</button>
+                <button type="button" class="btn dropdown-toggle" data-toggle="dropdown">
+                  <span class="caret"></span>
+                </button>
+                <ul class="dropdown-menu" role="menu">
+                  <li><a href="#">1</a></li>
+                  <li><a href="#">3</a></li>
+                </ul>
+              </div>
             </div>
-          </div>
-          <div class="col-md-2 day-btn resize">
-            <div class="btn-group">
-              <button type="button" class="btn">1</button>
-              <button type="button" class="btn dropdown-toggle" data-toggle="dropdown">
-                <span class="caret"></span>
-              </button>
-              <ul class="dropdown-menu" role="menu">
-                <li><a href="#">2</a></li>
-                <li><a href="#">3</a></li>
-              </ul>
+            <div class="col-md-2 person-btn resize">
+              <div class="btn-group">
+                <button type="button" class="btn">2</button>
+                <button type="button" class="btn dropdown-toggle" data-toggle="dropdown">
+                  <span class="caret"></span>
+                </button>
+                <ul class="dropdown-menu" role="menu">
+                  <li><a href="#">1</a></li>
+                  <li><a href="#">3</a></li>
+                </ul>
+              </div>
             </div>
-          </div>
-          <div class="col-md-1">
-            <button class="btn btn-basic btn-md" name="button">SEARCH BOOK</button>
+            <div class="col-md-2 child-btn resize">
+              <div class="btn-group">
+                <button type="button" class="btn">1</button>
+                <button type="button" class="btn dropdown-toggle" data-toggle="dropdown">
+                  <span class="caret"></span>
+                </button>
+                <ul class="dropdown-menu" role="menu">
+                  <li><a href="#">2</a></li>
+                  <li><a href="#">3</a></li>
+                </ul>
+              </div>
+            </div>
+            <div class="col-md-2 day-btn resize">
+              <div class="btn-group">
+                <button type="button" class="btn">1</button>
+                <button type="button" class="btn dropdown-toggle" data-toggle="dropdown">
+                  <span class="caret"></span>
+                </button>
+                <ul class="dropdown-menu" role="menu">
+                  <li><a href="#">2</a></li>
+                  <li><a href="#">3</a></li>
+                </ul>
+              </div>
+            </div>
+            <div class="col-md-1">
+              <button class="btn btn-basic btn-md" name="button">SEARCH BOOK</button>
+            </div>
           </div>
         </div>
       </div>
@@ -137,16 +137,16 @@
     <div class="row">
       <div class="col-md-2"></div>
       <div class="col-md-2">
-        <img class="img-responsive center-block" src="../assets/suitcase-icon.png">
+        <img class="img-responsive center-block" src="assets/suitcase-icon.png">
       </div>
       <div class="col-md-2">
-        <img class="img-responsive center-block" src="../assets/map-icon.png">
+        <img class="img-responsive center-block" src="assets/map-icon.png">
       </div>
       <div class="col-md-2">
-        <img class="img-responsive center-block" src="../assets/globe-icon.png">
+        <img class="img-responsive center-block" src="assets/globe-icon.png">
       </div>
       <div class="col-md-2">
-        <img class="img-responsive center-block" src="../assets/messaging-icon.png">
+        <img class="img-responsive center-block" src="assets/messaging-icon.png">
       </div>
       <div class="col-md-2"></div>
     </div>
