--- a/pages/06-news.html
+++ b/pages/06-news.html
@@ -7,8 +7,13 @@
   <title>News</title>
   <link rel="stylesheet" href="css/bootstrap.css">
   <link rel="stylesheet" href="css/layout.css">
+  <link rel="stylesheet" href="css/06-news.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
+  <div class="container-fluid">
+    
+  </div>
 
 </body>
 </html>
