--- a/pages/02-about-us.html
+++ b/pages/02-about-us.html
@@ -24,12 +24,12 @@
     <div class="row about-us-back">
       <div class="col-md-2"></div>
       <div class="col-md-8">
-        <h1 class=" text-center about-us-desc"><strong>About Us</strong></h1>
-          <p class="text-center desc-about-us"><strong>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</strong></p>
-          <p class="text-center desc-about-us desc-about-content">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        <h1 class=" text-center about-us-desc"><strong>ABOUT US</strong></h1>
+          <p class="text-center desc-about-us"><strong><em>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</em></strong></p>
+          <p class="text-center desc-about-us desc-about-content"><em>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</em></p>
       </div>
       <div class="col-md-2"></div>
-  </div>
+    </div>
     <div class="row icons-row">
       <div class="col-md-2"></div>
       <div class="col-md-2">
@@ -89,6 +89,35 @@
         </p>
       </div>
       <div class="col-md-2"></div>
+    </div>
+    <div class="row">
+      <div class="col-md-3"></div>
+      <div class="col-md-6 team-overview">
+        <p class="text-center team-overview">Team</p>
+        <p class="text-center team-overview-desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
+      </div>
+      <div class="col-md-3"></div>
+    </div>
+    <div class="row">
+      <div class="col-md-2"></div>
+      <div class="col-md-2">
+        <img src="../assets/gray-circular-background.png" class="img-responsive">
+        <img src="../assets/about-us-img.png" class="img-responsive blank-img">
+      </div>
+      <div class="col-md-2">
+        <img src="../assets/gray-circular-background.png" class="img-responsive">
+        <img src="../assets/about-us-img.png" class="img-responsive blank-img">
+      </div>
+      <div class="col-md-2">
+        <img src="../assets/gray-circular-background.png" class="img-responsive">
+        <img src="../assets/about-us-img.png" class="img-responsive blank-img">
+      </div>
+      <div class="col-md-2">
+        <img src="../assets/gray-circular-background.png" class="img-responsive">
+        <img src="../assets/about-us-img.png" class="img-responsive blank-img">
+      </div>
+      <div class="col-md-2">
+      </div>
     </div>
   </div>
 </body>
