--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@
       </main>
       <!-- Footer -->
       <footer>
-        <div class="navbar navbar-inverse navbar-fixed-bottom" role="navigation">
+        <div class="navbar navbar-inverse" role="navigation">
           <div class="footer-container-fluid">
             <div class="row footer">
               <div class="col-md-3 col-md-offset-2">
@@ -353,7 +353,7 @@
                 <img src="assets/logo_160.png"
               </div>
               </div>
-              <div>
+              <div class="row">
                 <div class="navbar-text pull-left">
                   <p>Copyright @2015 NORTSEA | About NORTSEA | Contact Support</p>
                 </div>
@@ -361,6 +361,7 @@
                   <p>Designed by Faith34</p>
                 </div>
               </div>
+            </div>
           </div>
       </footer>
   </div>
