create about us team module

--- a/pages/02-about-us.html
+++ b/pages/02-about-us.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="../css/layout.css">
   <link rel="stylesheet" href="../css/02-about-us.css">
   <link rel="stylesheet" href="../css/icons-style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
   <div class="container-fluid">
@@ -100,24 +101,87 @@
     </div>
     <div class="row">
       <div class="col-md-2"></div>
-      <div class="col-md-2">
+      <div class="col-md-2 png-rows">
         <img src="../assets/gray-circular-background.png" class="img-responsive">
         <img src="../assets/about-us-img.png" class="img-responsive blank-img">
       </div>
-      <div class="col-md-2">
+      <div class="col-md-2 png-rows">
         <img src="../assets/gray-circular-background.png" class="img-responsive">
         <img src="../assets/about-us-img.png" class="img-responsive blank-img">
       </div>
-      <div class="col-md-2">
+      <div class="col-md-2 png-rows">
         <img src="../assets/gray-circular-background.png" class="img-responsive">
         <img src="../assets/about-us-img.png" class="img-responsive blank-img">
       </div>
-      <div class="col-md-2">
+      <div class="col-md-2 png-rows">
         <img src="../assets/gray-circular-background.png" class="img-responsive">
         <img src="../assets/about-us-img.png" class="img-responsive blank-img">
       </div>
+      <div class="col-md-2"></div>
+    </div>
+    <div class="row">
+      <div class="col-md-2"></div>
       <div class="col-md-2">
+        <p class="text-center john-doe">John Doe</p>
+        <p class="text-center founder">Founder</p>
       </div>
+      <div class="col-md-2">
+        <p class="text-center john-doe">John Doe</p>
+        <p class="text-center founder">Founder</p>
+      </div>
+      <div class="col-md-2">
+        <p class="text-center john-doe">John Doe</p>
+        <p class="text-center founder">Founder</p>
+      </div>
+      <div class="col-md-2">
+        <p class="text-center john-doe">John Doe</p>
+        <p class="text-center founder">Founder</p>
+      </div>
+      <div class="text-center col-md-2"></div>
+    </div>
+    <div class="row">
+      <div class="col-md-2"></div>
+      <div class="col-md-2">
+        <p class="text-center team-desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+      </div>
+      <div class="col-md-2">
+        <p class="text-center team-desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+      </div>
+      <div class="col-md-2">
+        <p class="text-center team-desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+      </div>
+      <div class="col-md-2">
+        <p class="text-center team-desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+      </div>
+      <div class="col-md-2"></div>
+    </div>
+    <div class="row">
+      <div class="col-md-2"></div>
+      <div class="col-md-2 text-center bottom-spacing">
+        <a href="#" class="social-media-icons fa fa-facebook"></a>
+        <a href="#" class="social-media-icons fa fa-twitter"></a>
+        <a href="#" class="social-media-icons fa fa-dribbble"></a>
+        <a href="#" class="social-media-icons fa fa-instagram"></a>
+      </div>
+      <div class="col-md-2 text-center bottom-spacing">
+        <a href="#" class="social-media-icons fa fa-facebook"></a>
+        <a href="#" class="social-media-icons fa fa-twitter"></a>
+        <a href="#" class="social-media-icons fa fa-dribbble"></a>
+        <a href="#" class="social-media-icons fa fa-instagram"></a>
+      </div>
+      <div class="col-md-2 text-center bottom-spacing">
+        <a href="#" class="social-media-icons fa fa-facebook"></a>
+        <a href="#" class="social-media-icons fa fa-twitter"></a>
+        <a href="#" class="social-media-icons fa fa-dribbble"></a>
+        <a href="#" class="social-media-icons fa fa-instagram"></a>
+      </div>
+      <div class="col-md-2 text-center bottom-spacing">
+        <a href="#" class="social-media-icons fa fa-facebook"></a>
+        <a href="#" class="social-media-icons fa fa-twitter"></a>
+        <a href="#" class="social-media-icons fa fa-dribbble"></a>
+        <a href="#" class="social-media-icons fa fa-instagram"></a>
+      </div>
+      <div class="col-md-2"></div>
     </div>
   </div>
 </body>
