fix styling issues with about-us page.

--- a/pages/02-about-us.html
+++ b/pages/02-about-us.html
@@ -157,25 +157,25 @@
     </div>
     <div class="row">
       <div class="col-md-2"></div>
-      <div class="col-md-2 text-center bottom-spacing">
+      <div class="col-md-2 text-center">
         <a href="#" class="social-media-icons fa fa-facebook"></a>
         <a href="#" class="social-media-icons fa fa-twitter"></a>
         <a href="#" class="social-media-icons fa fa-dribbble"></a>
         <a href="#" class="social-media-icons fa fa-instagram"></a>
       </div>
-      <div class="col-md-2 text-center bottom-spacing">
+      <div class="col-md-2 text-center">
         <a href="#" class="social-media-icons fa fa-facebook"></a>
         <a href="#" class="social-media-icons fa fa-twitter"></a>
         <a href="#" class="social-media-icons fa fa-dribbble"></a>
         <a href="#" class="social-media-icons fa fa-instagram"></a>
       </div>
-      <div class="col-md-2 text-center bottom-spacing">
+      <div class="col-md-2 text-center">
         <a href="#" class="social-media-icons fa fa-facebook"></a>
         <a href="#" class="social-media-icons fa fa-twitter"></a>
         <a href="#" class="social-media-icons fa fa-dribbble"></a>
         <a href="#" class="social-media-icons fa fa-instagram"></a>
       </div>
-      <div class="col-md-2 text-center bottom-spacing">
+      <div class="col-md-2 text-center">
         <a href="#" class="social-media-icons fa fa-facebook"></a>
         <a href="#" class="social-media-icons fa fa-twitter"></a>
         <a href="#" class="social-media-icons fa fa-dribbble"></a>
@@ -183,6 +183,7 @@
       </div>
       <div class="col-md-2"></div>
     </div>
+    <div class="col-md-12 spacing"></div>
   </div>
 </body>
 </html>
