Working -01-nap.html & css files

--- a/modules/01-nap.html
+++ b/modules/01-nap.html
@@ -5,70 +5,66 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>NortSea-Tidal-Wave</title>
-  <link rel="stylesheet" href="css/bootstrap.css">
-  <link rel="stylesheet" href="css/01-nap.css">
+  <link rel="stylesheet" href="../css/bootstrap.css">
+  <link rel="stylesheet" href="../css/01-nap.css">
 </head>
 <body>
 
   <div class="container-fluid">
-    <main class="row">
-      <div class="col-md-12">
-          <div class="col-md-offset-2 col-md-4 news">
-            <h4 class="title">News<img class="img-responsive" src="assets/indicator-dots.png" align="right" alt="Responsive image"></img></h4>
-             <div class="row">
-               <div class="col-md-6">
-                 <img class="img-responsive" src="assets/Jan-29.png" alt="Responsive image">
-               </div>
-              <div class="col-md-5">
-                <h5><a href="#">Lorem ipsum dolor sit amet</a></h5>
-                <a class="news1" href="#">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt</a>
-                <p><a class="news1" href="#">Read More <i class="fa fa-caret-right"></i></a></p>
-              </div>
-            </div>
-            <div class="row">
-             <div class="col-md-6">
-               <img class="img-responsive" src="assets/Feb-15.png" alt="Responsive image">
-            </div>
-             <div class="col-md-5">
-              <h5><a href="#">Lorem ipsum dolor sit amet</a></h5>
-              <a class="news1" href="#">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt</a>
-              <p><a class="news1" href="#">Read More <i class="fa fa-caret-right"></i></a></p>
-            </div>
+    <main class="row nap">
+      <div class="col-md-4 col-md-offset-2 box">
+        <h4 class="title">News<img class="img-responsive" src="../assets/indicator-dots.png" align="right"></img></h4>
+        <div class="row">
+          <div class="col-md-6 col1">
+            <img class="img-responsive" src="../assets/Jan-29.png">
           </div>
-           <div class="row">
-             <div class="col-md-6">
-               <img class="img-responsive" src="assets/Feb-15.png" alt="Responsive image">
-             </div>
-             <div class="col-md-5">
-              <h5><a href="#">Lorem ipsum dolor sit amet</a></h5>
-              <a class="news1" href="#">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt</a>
-              <p><a class="news1" href="#">Read More <i class="fa fa-caret-right"></i></a></p>
-            </div>
-          </div>
-          <div class="row">
-            <a href="#" class="btn-view-all col-md-11" role="button">View All</a>
-          </div>
-      </div>
-
-        <div class="col-md-3">
-          <div class="row announcements">
-            <h4 class="title">Announcements<img class="img-responsive" src="assets/indicator-dots.png" align="right" alt="Responsive image"></img></h4>
-            <h5 class="title">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor</h5>
-            <a href="#">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna</a>
-            <p><a href="#">Read More <i class="fa fa-caret-right"></i></a></p>
-            <div class="border-line"></div>
-            <h5 class="title">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor</h5>
-            <a href="#">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna</a>
-            <p><a href="#">Read More <i class="fa fa-caret-right"></i></a></p>
-          </div>
-          <div class="row products top-buffer">
-            <div class="products">
-              <h4 class="title">Products</h4>
-              <a href="#">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod.</a>
-              <p><a href="#">Read More <i class="fa fa-caret-right"></i></a></p>
-            </div>
+          <div class="col-md-5 col2">
+            <p class="headln">Lorem ipsum dolor sit amet</p>
+            <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt</p>
+            <p class="headln">Read More <i class="fa fa-caret-right"></i></p>
           </div>
         </div>
+        <div class="row">
+          <div class="col-md-6 col1">
+            <img class="img-responsive" src="../assets/Feb-15.png">
+          </div>
+          <div class="col-md-5 col2">
+            <p class="headln">Lorem ipsum dolor sit amet</p>
+            <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt</p>
+            <p class="headln">Read More <i class="fa fa-caret-right"></i></p>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-6">
+            <img class="img-responsive" src="../assets/Mar-2.png">
+          </div>
+          <div class="col-md-5 col2">
+            <p class="headln">Lorem ipsum dolor sit amet</p>
+            <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt</p>
+            <p class="headln">Read More <i class="fa fa-caret-right"></i></p>
+          </div>
+        </div>
+        <button class="btn-view-all btn-default btn-block" role="button">View All</button>
       </div>
+      <div class="col-md-3 anpro">
+        <div class="row box">
+          <h4 class="title">Announcements<img class="img-responsive" src="../assets/indicator-dots.png" align="right"></img></h4>
+          <p class="headln">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
+          <p class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna</p>
+          <p class="headln">Read More <i class="fa fa-caret-right"></i></p>
+          <div class="border-line"></div>
+          <p class="headln">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
+          <p class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna</p>
+          <p class="headln">Read More <i class="fa fa-caret-right"></i></p>
+        </div>
+       <div class="row box top-buffer">
+          <div class="col-md-7">
+             <h4 class="title">Products</h4>
+             <p class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod.</p>
+             <p class="headln">Read More <i class="fa fa-caret-right"></i></a></p>
+          </div>
+       </div>
     </main>
   </div>
+</body>
+</html>
