--- a/pages/02-about-us.html
+++ b/pages/02-about-us.html
@@ -22,6 +22,11 @@
         <p class="text-right">Home / Pages / About Us</p>
       </div>
     </div>
+    <div class="row about-us-back black-space">
+      <div class="col-md-2"></div>
+      <div class="col-md-8"></div>
+      <div class="col-md-2"></div>
+    </div>
     <div class="row about-us-back">
       <div class="col-md-2"></div>
       <div class="col-md-8">
