create where we are module in 03-contact.html

--- a/pages/03-contact.html
+++ b/pages/03-contact.html
@@ -5,14 +5,35 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Contact</title>
-  <link rel="stylesheet" href="css/bootstrap.css">
-  <link rel="stylesheet" href="css/layout.css">
-  <link rel="stylesheet" href="css/03-contact.css">
+  <link rel="stylesheet" href="../css/bootstrap.css">
+  <link rel="stylesheet" href="../css/layout.css">
+  <link rel="stylesheet" href="../css/03-contact.css">
+  <link rel="stylesheet" href="../css/02-about-us.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
   <div class="container-fluid">
-    
+    <div class="row about-us-back">
+      <div class="col-md-1"></div>
+      <div class="col-md-7">
+        <h1 class="text-left left-title">Contact</h1>
+      </div>
+      <div class="col-md-3">
+        <p class="text-right">Home / Pages / About Us</p>
+      </div>
+    </div>
+    <div class="row about-us-back black-space">
+      <div class="col-md-2"></div>
+      <div class="col-md-8"></div>
+      <div class="col-md-2"></div>
+    </div>
+    <div class="row about-us-back">
+      <div class="col-md-2"></div>
+      <div class="col-md-8">
+        <h1 class=" text-center about-us-desc"><strong>WHERE WE ARE</strong></h1>
+          <p class="text-center desc-about-us"><strong><em>1300 Blvd Santa Monica, CA 24051 United States.</em></strong></p>
+          <p class="text-center desc-about-us desc-about-content"><em>02563234234</em></p>
+      </div>
   </div>
 
 </body>
