--- a/pages/03-contact.html
+++ b/pages/03-contact.html
@@ -10,8 +10,8 @@
   <link rel="stylesheet" href="../css/contact.css">
 </head>
 <body>
-  <main class="container-fluid contact-feed">
-    <div class="row info">
+  <main class="container-fluid">
+    <main class="row info contact-feed">
       <div class="col-md-4 contact_info">
         <h3>Contact Info</h3>
         <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
@@ -47,7 +47,6 @@
   </div>
   <div class="empty-text col-md-8">
     <p><textarea name="empty" type="text" rows="8"></textarea><p>
-  </div>
 </main>
 </body>
 </html>
