--- a/pages/03-contact.html
+++ b/pages/03-contact.html
@@ -35,6 +35,44 @@
           <p class="text-center desc-about-us desc-about-content"><em>02563234234</em></p>
       </div>
   </div>
+  <main class="row info contact-feed">
+    <div class="col-md-4 contact_info">
+      <h3>Contact Info</h3>
+      <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+
+      <div class="row  info_list">
+         <div class="col-md-6 col1">
+           <p class="descrip">Address:</p>
+           <p class-"d-info">795 Fake Ave, Door 6<br>Wonderland, CA 90104, USA</p>
+           <p class="descrip">Phone & Fax:</p>
+           <p class-"d-info">+440 875369208<br>+440 353363114</p>
+         </div>
+         <div class="col-md-6 col2">
+           <p class="descrip">Email:</p>
+           <p class-"d-info">info@waxom.com<br>support@waxom.com</p>
+           <p class="descrip">Social Network:</p>
+
+        </div>
+      </div>
+  </div>
+    <div class="col-md-4 feedback">
+   <h3>Feedback</h3>
+   <div class="form-group">
+      <input class="name" placeholder="Your Name" type="text"></input>
+   </div>
+   <div class="form-group">
+      <input class="email" placeholder="Your Email Address" type="text"></input>
+   </div>
+   <div class="form-group">
+      <p><textarea name="message" type="text" placeholder="Your Message" rows="4"></textarea><p>
+   </div>
+   <button class= "btn btn-default">SEND MESSAGE</button>
+ </div>
+</div>
+    <div class="empty-text col-md-8">
+      <p><textarea name="empty" type="text" rows="8"></textarea><p>
+    </div>
+</main>
 
 </body>
 </html>
