--- a/pages/09-services.html
+++ b/pages/09-services.html
@@ -8,11 +8,34 @@
   <link rel="stylesheet" href="../css/bootstrap.css">
   <link rel="stylesheet" href="../css/layout.css">
   <link rel="stylesheet" href="../css/09-services.css">
+  <link rel="stylesheet" href="../css/02-about-us.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
   <div class="container-fluid">
-
+    <div class="row about-us-back">
+      <div class="col-md-1"></div>
+      <div class="col-md-7">
+        <h1 class="text-left left-title">Services</h1>
+      </div>
+      <div class="col-md-3">
+        <p class="text-right">Home / Pages / Services</p>
+      </div>
+    </div>
+    <div class="row about-us-back black-space">
+      <div class="col-md-2"></div>
+      <div class="col-md-8"></div>
+      <div class="col-md-2"></div>
+    </div>
+    <div class="row about-us-back">
+      <div class="col-md-2"></div>
+      <div class="col-md-8">
+        <h1 class=" text-center about-us-desc"><strong>PREFERENCES</strong></h1>
+          <p class="text-center desc-about-us"><strong><em>This is the Photoshop's version of Loren Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean sollcitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nee sagittis sem nibih id elit. Duis</em></strong></p>
+          <p class="text-center desc-about-us desc-about-content"><em>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</em></p>
+      </div>
+      <div class="col-md-2"></div>
+    </div>
   </div>
 
 </body>
