--- a/pages/09-services.html
+++ b/pages/09-services.html
@@ -36,7 +36,16 @@
       </div>
       <div class="col-md-2"></div>
     </div>
-  </div>
+    <div class="row about-us-back black-space-after">
+      <div class="col-md-3"></div>
+      <div class="col-md-6"></div>
+      <div class="col-md-3"></div>
+    </div>
+    <div class="row about-us-back">
+      <div class="col-md-3"></div>
+      <div class="col-md-6"></div>
+      <div class="col-md-3"></div>
+    </div>
 
 </body>
 </html>
