create div for update and test push issues.

--- a/pages/09-services.html
+++ b/pages/09-services.html
@@ -43,7 +43,9 @@
     </div>
     <div class="row about-us-back">
       <div class="col-md-3"></div>
-      <div class="col-md-6"></div>
+      <div class="col-md-6">
+        
+      </div>
       <div class="col-md-3"></div>
     </div>
 
