--- a/pages/09-services.html
+++ b/pages/09-services.html
@@ -9,6 +9,8 @@
   <link rel="stylesheet" href="../css/layout.css">
   <link rel="stylesheet" href="../css/09-services.css">
   <link rel="stylesheet" href="../css/02-about-us.css">
+  <link rel="stylesheet" href="../css/fontello.css">
+  <link rel="stylesheet" href="../fonts/fontello.woff">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
@@ -44,10 +46,63 @@
     <div class="row about-us-back">
       <div class="col-md-3"></div>
       <div class="col-md-6">
-        
+        <p class="text-center sub-header">Hotel Facilities</p>
       </div>
       <div class="col-md-3"></div>
     </div>
-
+    <div class="row about-us-back">
+      <div class="col-md-3"></div>
+      <div class="col-md-2">
+        <div class="demo-icon fa fa-wifi"></div>
+          <p class="text-center demo-icon-desc"> High-speed internet</p>
+      </div>
+      <div class="col-md-2">
+        <div class="demo-icon fa fa"
+      </div>
+      <div class="col-md-2">
+      </div>
+      <div class="col-md-3"></div>
+    </div>
+    <div class="row about-us-back">
+      <div class="col-md-3"></div>
+      <div class="col-md-2">
+      </div>
+      <div class="col-md-2">
+      </div>
+      <div class="col-md-2">
+      </div>
+      <div class="col-md-3"></div>
+    </div>
+    <div class="row about-us-back">
+      <div class="col-md-3"></div>
+      <div class="col-md-2">
+      </div>
+      <div class="col-md-2">
+      </div>
+      <div class="col-md-2">
+      </div>
+      <div class="col-md-3"></div>
+    </div>
+    <div class="row about-us-back">
+      <div class="col-md-3"></div>
+      <div class="col-md-2">
+      </div>
+      <div class="col-md-2">
+      </div>
+      <div class="col-md-2">
+      </div>
+      <div class="col-md-3"></div>
+    </div>
+    <div class="row about-us-back">
+      <div class="col-md-3"></div>
+      <div class="col-md-2">
+      </div>
+      <div class="col-md-2">
+      </div>
+      <div class="col-md-2">
+      </div>
+      <div class="col-md-3"></div>
+    </div>
+  </div>
 </body>
 </html>
