News image background and icon

--- a/pages/07-news-detail.html
+++ b/pages/07-news-detail.html
@@ -5,14 +5,21 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>News Detail</title>
-  <link rel="stylesheet" href="css/bootstrap.css">
-  <link rel="stylesheet" href="css/layout.css">
-  <link rel="stylesheet" href="css/07-news-detail.css">
+  <link rel="stylesheet" href="../css/bootstrap.css">
+  <link rel="stylesheet" href="../css/layout.css">
+  <link rel="stylesheet" href="../css/07-news-detail.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
   <div class="container-fluid">
-    
+    <div class="row-news-image" id="news-image">
+      <div class="col-md-8">
+        <div class="background-box">
+          <img src="../assets/about-us-img.png" class="img-responsive blank-img">
+          <img src="../assets/indicator-dots.png" class="indicator-dots">
+        </div>
+      </div>
+    </div>
   </div>
 
 </body>
