Finsih image for news module

--- a/pages/07-news-detail.html
+++ b/pages/07-news-detail.html
@@ -15,8 +15,8 @@
     <div class="row-news-image" id="news-image">
       <div class="col-md-8">
         <div class="background-box">
-          <img src="../assets/about-us-img.png" class="img-responsive blank-img">
-          <img src="../assets/indicator-dots.png" class="indicator-dots">
+          <img src="../assets/about-us-img.png" class="img-responsive news-blank-img">
+          <img src="../assets/indicator-dots.png" class="news-img-dots">
         </div>
       </div>
     </div>
